Left Content adaptiv

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           </p>
         </div>
         <div class="request-right">
-          <h2><b>Зареєструватися на курси</b></h2>
+          <h2>Зареєструватися на курси</h2>
           <div class="user-input">
             <p>Ім'я</p>
             <input type="name" placeholder="Ім'я" />
