Courses with slider

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <title>0xIT</title>
   </head>
   <body>
+    <!-- HEADER MENU -->
     <header>
       <div class="header-content">
         <img src="img/logo_Oxit.png" alt="logo_Oxit" />
@@ -40,6 +41,7 @@
             Подати заявку
           </button>
         </div>
+        <!-- HAMBURGER MENU -->
         <div class="backcolor">
           <input id="menu-toggle" type="checkbox" />
           <label class="menu-button-container" for="menu-toggle">
@@ -84,8 +86,12 @@
             </li>
           </ul>
         </div>
+        <!-- END HUMBURGER MENU-->
       </div>
     </header>
+    <!-- END HEADER MENU-->
+
+    <!-- REGISTRATION ON COURSE -->
     <section id="request">
       <div class="request-conteiner">
         <div class="request-left">
@@ -133,9 +139,12 @@
         </div>
       </div>
     </section>
+    <!-- END REGISTRATION ON COURSE-->
+
+    <!-- NAME COURSE -->
     <section id="course">
       <div class="course-saction">
-        <h1>Курс "Розробка свйтів"</h1>
+        <h1>Курс "Розробка сайтів"</h1>
         <div class="course-elem slider">
           <div class="course">
             <img src="img/icons/course-icon-1.png" alt="course-icon-1" />
@@ -170,6 +179,7 @@
           </div>
         </div>
       </div>
+      <div class="slider-buttons"></div>
       <div class="course-result">
         <div class="statisctic">
           <div class="elem-stat">
@@ -195,8 +205,9 @@
         </div>
       </div>
     </section>
+    <!-- END NAME COURSES-->
   </body>
   <script src="js/menu.js"></script>
   <script src="js/validation.js"></script>
-  <!--  <script src="js/course_slider.js"></script>-->
+  <script src="js/course_slider.js"></script>
 </html>
