--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           <div class="elem-stat">
             <img src="img/icons/statistic-icon-1.png" alt="statistic-icon-1" />
             <h2>25</h2>
-            <p>курсів організовано</p>
+            <p>Курсів організовано</p>
           </div>
           <div class="elem-stat">
             <img src="img/icons/statistic-icon-2.png" alt="statistic-icon-2" />
