--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/style/main.css" />
     <link rel="stylesheet" href="css/null.css" />
-    <link rel="stylesheet" href="css/course.css" />
+    <link rel="stylesheet" href="css/style/course.css" />
+    <link rel="stylesheet" href="css/style/qoute.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap"
       rel="stylesheet"
