--- a/index.html
+++ b/index.html
@@ -207,7 +207,61 @@
       </div>
     </section>
     <!-- END NAME COURSES-->
+    <section id="markCurse">
+      <div class="qoute-conteiner">
+        <h1>Що кажуть студенти наших курсів:</h1>
+        <div class="qoute-list">
+          <div class="qoute-elem">
+            <div class="qoute-text">
+              <span id="first">“</span>
+              <p>
+                Під час проходження курсів Drupal у школі ОхIT я навчився
+                створювати не досить складні сайти та знайшов справу, якою хочу
+                займатись. Після успішного завершення курсів мені надали
+                можливість продовжити навчання вже в якості Intern Site Builder.
+                Зараз я можу сказати, що Drupal та OxIT повністю змінили моє
+                життя.
+              </p>
+              <span id="last"><p>„</p></span>
+            </div>
+            <h3>Коля</h3>
+            <p><i>Drupal-девелоперr</i></p>
+          </div>
+          <div class="qoute-elem">
+            <div class="qoute-text">
+              <span id="first">“</span>
+              <p>
+                Під час проходження курсів Drupal у школі ОхIT я навчився
+                створювати не досить складні сайти та знайшов справу, якою хочу
+                займатись. Після успішного завершення курсів мені надали
+                можливість продовжити навчання вже в якості Intern Site Builder.
+                Зараз я можу сказати, що Drupal та OxIT повністю змінили моє
+                життя.
+              </p>
+              <span id="last"><p>„</p></span>
+            </div>
+            <h3>Коля2</h3>
+            <p><i>Drupal-девелоперr</i></p>
+          </div>
+          <div class="qoute-elem">
+            <div class="qoute-text">
+              <span id="first">“</span>
+              <p>
+                Під час проходження курсів Drupal у школі ОхIT я навчився
+                створювати не досить складні сайти та знайшов справу, якою хочу
+              </p>
+              <span id="last"><p>„</p></span>
+            </div>
+            <h3>Коля3</h3>
+            <p><i>Drupal-девелоперr</i></p>
+          </div>
+        </div>
+      </div>
+      <div class="qoute-buttons"></div>
+    </section>
   </body>
+  <script src="js/qoute.js"></script>
+
   <script src="js/menu.js"></script>
   <script src="js/validation.js"></script>
   <script src="js/course_slider.js"></script>
