--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </div>
     </header>
     <!-- END HEADER MENU-->
-
+    <section id="main"></section>
     <!-- REGISTRATION ON COURSE -->
     <section id="request">
       <div class="request-conteiner">
@@ -225,7 +225,7 @@
               <span id="last"><p>„</p></span>
             </div>
             <h3>Коля</h3>
-            <p><i>Drupal-девелоперr</i></p>
+            <p><i>Drupal-девелопер</i></p>
           </div>
           <div class="qoute-elem">
             <div class="qoute-text">
@@ -241,7 +241,7 @@
               <span id="last"><p>„</p></span>
             </div>
             <h3>Коля2</h3>
-            <p><i>Drupal-девелоперr</i></p>
+            <p><i>Drupal-девелопер</i></p>
           </div>
           <div class="qoute-elem">
             <div class="qoute-text">
@@ -253,11 +253,25 @@
               <span id="last"><p>„</p></span>
             </div>
             <h3>Коля3</h3>
-            <p><i>Drupal-девелоперr</i></p>
+            <p><i>Drupal-девелопер</i></p>
           </div>
         </div>
       </div>
       <div class="qoute-buttons"></div>
+    </section>
+    <section id="video">
+      <div class="video-content">
+        <div class="title-dis">
+          <h1>Відео</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel dolor
+            laborum mollitia est, commodi harum ad dolorem doloremque,
+            cupiditate laboriosam ea iure sed distinctio aliquid eos animi
+            magni, facere voluptas!
+          </p>
+        </div>
+        <div class="videoUrl"></div>
+      </div>
     </section>
   </body>
   <script src="js/qoute.js"></script>
