Cerate Video block

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/null.css" />
     <link rel="stylesheet" href="css/style/course.css" />
     <link rel="stylesheet" href="css/style/qoute.css" />
+    <link rel="stylesheet" href="css/style/video.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap"
       rel="stylesheet"
@@ -270,12 +271,20 @@
             magni, facere voluptas!
           </p>
         </div>
-        <div class="videoUrl"></div>
+        <div class="videoUrl">
+          <iframe
+            src="https://www.youtube.com/embed/LB1ahuULdvo"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
+        </div>
       </div>
     </section>
   </body>
-  <script src="js/qoute.js"></script>
 
+  <script src="js/qoute.js"></script>
   <script src="js/menu.js"></script>
   <script src="js/validation.js"></script>
   <script src="js/course_slider.js"></script>
