--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/style/course.css" />
     <link rel="stylesheet" href="css/style/qoute.css" />
     <link rel="stylesheet" href="css/style/video.css" />
+    <link rel="stylesheet" href="css/style/mentor.css" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap"
       rel="stylesheet"
@@ -148,6 +150,7 @@
       <div class="course-saction">
         <h1>Курс "Розробка сайтів"</h1>
         <div class="course-elem slider">
+          <!--Перший елемент-->
           <div class="course">
             <img src="img/icons/course-icon-1.png" alt="course-icon-1" />
             <h3>Розробка сайтів на WordPress</h3>
@@ -159,6 +162,9 @@
               тестових завдань.
             </p>
           </div>
+          <!--END-->
+          <!---->
+          <!--Другий елемент-->
           <div class="course">
             <img src="img/icons/course-icon-2.png" alt="course-icon-2" />
             <h3>Розробка сайтів на Drupal 8</h3>
@@ -169,6 +175,9 @@
               Rules, Panels, Devel, Paragraph та багатьох інших).
             </p>
           </div>
+          <!--END-->
+          <!---->
+          <!--Тертій елемент-->
           <div class="course">
             <img src="img/icons/course-icon-3.png" alt="course-icon-3" />
             <h3>Ознайомлення з тестуванням</h3>
@@ -179,6 +188,7 @@
               (функціональне, регресивне, системне, тестування швидкодії тощо).
             </p>
           </div>
+          <!--END-->
         </div>
       </div>
       <div class="slider-buttons"></div>
@@ -208,10 +218,13 @@
       </div>
     </section>
     <!-- END NAME COURSES-->
+
+    <!-- QOUTE CURSES -->
     <section id="markCurse">
       <div class="qoute-conteiner">
         <h1>Що кажуть студенти наших курсів:</h1>
         <div class="qoute-list">
+          <!--Перший елемент-->
           <div class="qoute-elem">
             <div class="qoute-text">
               <span id="first">“</span>
@@ -228,6 +241,9 @@
             <h3>Коля</h3>
             <p><i>Drupal-девелопер</i></p>
           </div>
+          <!--END-->
+          <!---->
+          <!--Другий елемент-->
           <div class="qoute-elem">
             <div class="qoute-text">
               <span id="first">“</span>
@@ -244,6 +260,9 @@
             <h3>Коля2</h3>
             <p><i>Drupal-девелопер</i></p>
           </div>
+          <!--END-->
+          <!---->
+          <!--Тертій елемент-->
           <div class="qoute-elem">
             <div class="qoute-text">
               <span id="first">“</span>
@@ -256,10 +275,14 @@
             <h3>Коля3</h3>
             <p><i>Drupal-девелопер</i></p>
           </div>
+          <!--END-->
         </div>
       </div>
       <div class="qoute-buttons"></div>
     </section>
+    <!-- END QOUTE CURSES -->
+
+    <!-- VIDEO -->
     <section id="video">
       <div class="video-content">
         <div class="title-dis">
@@ -282,8 +305,116 @@
         </div>
       </div>
     </section>
+    <!-- END VIDEO -->
+
+    <!-- MENTOR -->
+    <section id="mentor">
+      <div class="mentors-conteiner">
+        <h1>Наші ментори</h1>
+        <div class="mentors-list">
+          <!--Перший елемент-->
+          <div class="mentors-elem">
+            <img src="img/viktor.png" alt="mentor_Viktor" />
+            <div class="mentor-dis">
+              <p id="mentor_name">Віктор</p>
+              <p>
+                Майбутнім управлінцям неабияк пощастило адже з ними ділитиметься
+                досвідом управлінець із величезним досвідом! Сам засновник і СЕО
+                компанії InternetDevels, Віктор Левандовський, висловив бажання
+                бути викладачем на курсах проект-менеджменту.
+              </p>
+              <p>
+                Віктору є про що розповісти. Він знає все про створення та
+                керування великими компаніями, ефективну комунікацію, успішні
+                проекти і багато іншого. При цьому він ніколи не скаже, що знає
+                все - саморозвиток для нього не закінчується жодної хвилини.
+              </p>
+              <p>
+                На книжкових Віктора полицях — сотні прочитаних книг про
+                управління і не тільки. А от заповітні мрії не стоять на полиці,
+                бо Віктор вміє впевнено йти до їхнього здійснення. Тільки
+                недавно він передавав усім привіт з Ельбрусу — найвищої точки
+                Європи.
+              </p>
+              <p>
+                Буде нестримна, мов гірська лавина, енергія, помножена на
+                мудрість і досвід. І ви таке пропустите? Записуйтесь уже зараз!
+              </p>
+            </div>
+          </div>
+          <!--END-->
+          <!---->
+          <!--Другий елемент-->
+          <div class="mentors-elem">
+            <img src="img/mark.png" alt="mentor_Mark" />
+            <div class="mentor-dis">
+              <p id="mentor_name">Марк</p>
+              <p>
+                Майбутнім управлінцям неабияк пощастило адже з ними ділитиметься
+                досвідом управлінець із величезним досвідом! Сам засновник і СЕО
+                компанії InternetDevels, Віктор Левандовський, висловив бажання
+                бути викладачем на курсах проект-менеджменту.
+              </p>
+              <p>
+                Віктору є про що розповісти. Він знає все про створення та
+                керування великими компаніями, ефективну комунікацію, успішні
+                проекти і багато іншого. При цьому він ніколи не скаже, що знає
+                все - саморозвиток для нього не закінчується жодної хвилини.
+              </p>
+              <p>
+                На книжкових Віктора полицях — сотні прочитаних книг про
+                управління і не тільки. А от заповітні мрії не стоять на полиці,
+                бо Віктор вміє впевнено йти до їхнього здійснення. Тільки
+                недавно він передавав усім привіт з Ельбрусу — найвищої точки
+                Європи.
+              </p>
+              <p>
+                Буде нестримна, мов гірська лавина, енергія, помножена на
+                мудрість і досвід. І ви таке пропустите? Записуйтесь уже зараз!
+              </p>
+            </div>
+          </div>
+          <!--END-->
+          <!---->
+          <!--Третій елемент-->
+          <div class="mentors-elem">
+            <img src="img/vova.png" alt="mentor_Vova" />
+            <div class="mentor-dis">
+              <p id="mentor_name">Володимир</p>
+              <p>
+                Майбутнім управлінцям неабияк пощастило адже з ними ділитиметься
+                досвідом управлінець із величезним досвідом! Сам засновник і СЕО
+                компанії InternetDevels, Віктор Левандовський, висловив бажання
+                бути викладачем на курсах проект-менеджменту.
+              </p>
+              <p>
+                Віктору є про що розповісти. Він знає все про створення та
+                керування великими компаніями, ефективну комунікацію, успішні
+                проекти і багато іншого. При цьому він ніколи не скаже, що знає
+                все - саморозвиток для нього не закінчується жодної хвилини.
+              </p>
+              <p>
+                На книжкових Віктора полицях — сотні прочитаних книг про
+                управління і не тільки. А от заповітні мрії не стоять на полиці,
+                бо Віктор вміє впевнено йти до їхнього здійснення. Тільки
+                недавно він передавав усім привіт з Ельбрусу — найвищої точки
+                Європи.
+              </p>
+              <p>
+                Буде нестримна, мов гірська лавина, енергія, помножена на
+                мудрість і досвід. І ви таке пропустите? Записуйтесь уже зараз!
+              </p>
+            </div>
+          </div>
+          <!--END-->
+        </div>
+        <div class="mentors-buttons"></div>
+      </div>
+    </section>
+    <!-- END MENTOR-->
   </body>
 
+  <script src="js/mentors.js"></script>
   <script src="js/qoute.js"></script>
   <script src="js/menu.js"></script>
   <script src="js/validation.js"></script>
