--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <section id="course">
       <div class="course-saction">
         <h1>Курс "Розробка сайтів"</h1>
-        <div class="course-elem slider">
+        <div class="course-elem">
           <!--Перший елемент-->
           <div class="course">
             <img src="img/icons/course-icon-1.png" alt="course-icon-1" />
