--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/style/qoute.css" />
     <link rel="stylesheet" href="css/style/video.css" />
     <link rel="stylesheet" href="css/style/mentor.css" />
+    <link rel="stylesheet" href="css/style/down.css" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap"
@@ -412,6 +413,55 @@
       </div>
     </section>
     <!-- END MENTOR-->
+
+    <!-- MAP -->
+    <section id="map">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d433.8756594788874!2d25.317568569581756!3d50.714558355936894!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4725997e35f529e9%3A0xeba249b67a64b0a9!2sInternetDevels!5e0!3m2!1suk!2sua!4v1707921116598!5m2!1suk!2sua"
+        width="100%"
+        height="400"
+        style="border: 0px; margin: 0px; padding: 0px"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
+    </section>
+    <section id="contacts">
+      <div class="contacts-container">
+        <div class="contacts-list">
+          <div class="elem-contacts">
+            <a href="tel:+38 067 332 17 55">
+              <img src="img/icons/call_white_24dp.svg" alt="phone" />
+              <h2>Телефон</h2>
+              <p>+38 067 332 17 55</p>
+            </a>
+          </div>
+          <div class="elem-contacts">
+            <a href="mailto:office@it.volyn.ua">
+              <img src="img/icons/email_white_24dp.svg" alt="email" />
+              <h2>Email</h2>
+              <p>office@it.volyn.ua</p>
+            </a>
+          </div>
+          <div class="elem-contacts">
+            <a href="https://maps.app.goo.gl/hko1SmDeL6uaaNfg8">
+              <img src="img/icons/room_white_24dp.svg" alt="location" />
+              <h2>Адреса</h2>
+              <p>вул. Боженка 34г, Луцьк</p>
+            </a>
+          </div>
+          <div class="elem-contacts">
+            <a href="https://www.facebook.com/oxitschool">
+              <img src="img/icons/icons8-facebook.svg" alt="facebook" />
+              <h2>Facebook</h2>
+              <p>facebook.com/oxitschool</p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <p>© Copyright 2018-2020 Internet Devels</p>
+      <p><a href="#">Умови політики конфіденційності</a></p>
+    </footer>
   </body>
 
   <script src="js/mentors.js"></script>
