--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- HEADER MENU -->
     <header>
       <div class="header-content">
-        <img src="img/logo_Oxit.png" alt="logo_Oxit" />
+        <a href="#"><img src="img/logo_Oxit.png" alt="logo_Oxit" /></a>
         <div class="header-right">
           <button data-section="main" onclick="scrollToSection('main')">
             Головна
@@ -195,6 +195,7 @@
       <div class="slider-buttons"></div>
       <div class="course-result">
         <div class="statisctic">
+          <div class="elem-stat"></div>
           <div class="elem-stat">
             <img src="img/icons/statistic-icon-1.png" alt="statistic-icon-1" />
             <h2>25</h2>
@@ -215,6 +216,7 @@
             <h2>120</h2>
             <p>Випускників курсів працевлаштовано</p>
           </div>
+          <div class="elem-stat"></div>
         </div>
       </div>
     </section>
@@ -427,34 +429,36 @@
     <section id="contacts">
       <div class="contacts-container">
         <div class="contacts-list">
+          <div class="elem-contacts"></div>
           <div class="elem-contacts">
-            <a href="tel:+38 067 332 17 55">
+            <a href="tel:+38 067 332 17 55" target="_blank">
               <img src="img/icons/call_white_24dp.svg" alt="phone" />
               <h2>Телефон</h2>
               <p>+38 067 332 17 55</p>
             </a>
           </div>
           <div class="elem-contacts">
-            <a href="mailto:office@it.volyn.ua">
+            <a href="mailto:office@it.volyn.ua" target="_blank">
               <img src="img/icons/email_white_24dp.svg" alt="email" />
               <h2>Email</h2>
               <p>office@it.volyn.ua</p>
             </a>
           </div>
           <div class="elem-contacts">
-            <a href="https://maps.app.goo.gl/hko1SmDeL6uaaNfg8">
+            <a href="https://maps.app.goo.gl/hko1SmDeL6uaaNfg8" target="_blank">
               <img src="img/icons/room_white_24dp.svg" alt="location" />
               <h2>Адреса</h2>
               <p>вул. Боженка 34г, Луцьк</p>
             </a>
           </div>
           <div class="elem-contacts">
-            <a href="https://www.facebook.com/oxitschool">
+            <a href="https://www.facebook.com/oxitschool" target="_blank">
               <img src="img/icons/icons8-facebook.svg" alt="facebook" />
               <h2>Facebook</h2>
               <p>facebook.com/oxitschool</p>
             </a>
           </div>
+          <div class="elem-contacts"></div>
         </div>
       </div>
     </section>
