--- a/index.html
+++ b/index.html
@@ -195,7 +195,6 @@
       <div class="slider-buttons"></div>
       <div class="course-result">
         <div class="statisctic">
-          <div class="elem-stat"></div>
           <div class="elem-stat">
             <img src="img/icons/statistic-icon-1.png" alt="statistic-icon-1" />
             <h2>25</h2>
@@ -216,7 +215,6 @@
             <h2>120</h2>
             <p>Випускників курсів працевлаштовано</p>
           </div>
-          <div class="elem-stat"></div>
         </div>
       </div>
     </section>
@@ -429,7 +427,6 @@
     <section id="contacts">
       <div class="contacts-container">
         <div class="contacts-list">
-          <div class="elem-contacts"></div>
           <div class="elem-contacts">
             <a href="tel:+38 067 332 17 55" target="_blank">
               <img src="img/icons/call_white_24dp.svg" alt="phone" />
@@ -458,13 +455,14 @@
               <p>facebook.com/oxitschool</p>
             </a>
           </div>
-          <div class="elem-contacts"></div>
         </div>
       </div>
     </section>
     <footer>
       <p>© Copyright 2018-2020 Internet Devels</p>
-      <p><a href="#">Умови політики конфіденційності</a></p>
+      <p style="margin-top: 10px">
+        <a href="#">Умови політики конфіденційності</a>
+      </p>
     </footer>
   </body>
 
