Fix bugs in slider

--- a/index.html
+++ b/index.html
@@ -428,14 +428,14 @@
       <div class="contacts-container">
         <div class="contacts-list">
           <div class="elem-contacts">
-            <a href="tel:+38 067 332 17 55" target="_blank">
+            <a href="tel:+38 067 332 17 55">
               <img src="img/icons/call_white_24dp.svg" alt="phone" />
               <h2>Телефон</h2>
               <p>+38 067 332 17 55</p>
             </a>
           </div>
           <div class="elem-contacts">
-            <a href="mailto:office@it.volyn.ua" target="_blank">
+            <a href="mailto:office@it.volyn.ua">
               <img src="img/icons/email_white_24dp.svg" alt="email" />
               <h2>Email</h2>
               <p>office@it.volyn.ua</p>
