--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
     <link rel="stylesheet" href="css/style/mentor.css" />
     <link rel="stylesheet" href="css/style/down.css" />
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap"
-      rel="stylesheet"
-    />
-
     <title>0xIT</title>
   </head>
   <body>
@@ -138,6 +133,11 @@
             <input type="checkbox" id="privacyCheckbox" /> Я погоджуюся із
             <a href="#">Політикою Конфіденційності</a>
           </div>
+        </div>
+      </div>
+      <div class="request-conteiner" style="padding-top: 0px">
+        <div class="request-right" style="padding-top: 0px"></div>
+        <div class="request-left" style="padding-top: 0px">
           <div class="reg-button">
             <button onclick="validateForm()">ЗАРЕЄСТРУВАТИСЯ ЗАРАЗ</button>
           </div>
@@ -149,7 +149,7 @@
     <!-- NAME COURSE -->
     <section id="course">
       <div class="course-saction">
-        <h1>Курс "Розробка сайтів"</h1>
+        <h1>Курс «Розробка сайтів»</h1>
         <div class="course-elem">
           <!--Перший елемент-->
           <div class="course">
@@ -289,10 +289,16 @@
         <div class="title-dis">
           <h1>Відео</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel dolor
-            laborum mollitia est, commodi harum ad dolorem doloremque,
-            cupiditate laboriosam ea iure sed distinctio aliquid eos animi
-            magni, facere voluptas!
+            Lorem Ipsum - це текст-"риба", що використовується в друкарстві та
+            дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI
+            сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній
+            підбірку зразків шрифтів. "Риба" не тільки успішно пережила п'ять
+            століть, але й прижилася в електронному верстуванні, залишаючись по
+            суті незмінною. Вона популяризувалась в 60-их роках минулого
+            сторіччя завдяки виданню зразків шрифтів Letraset, які містили
+            уривки з Lorem Ipsum, і вдруге нещодавно завдяки програмам
+            комп'ютерного верстування на кшталт Aldus Pagemaker, які
+            використовували різні версії Lorem Ipsum.
           </p>
         </div>
         <div class="videoUrl">
