--- a/index.html
+++ b/index.html
@@ -198,22 +198,22 @@
           <div class="elem-stat">
             <img src="img/icons/statistic-icon-1.png" alt="statistic-icon-1" />
             <h2>25</h2>
-            <p>Курсів організовано</p>
+            <p>курсів організовано</p>
           </div>
           <div class="elem-stat">
             <img src="img/icons/statistic-icon-2.png" alt="statistic-icon-2" />
             <h2>836</h2>
-            <p>Годин занять проведено</p>
+            <p>годин занять проведено</p>
           </div>
           <div class="elem-stat">
             <img src="img/icons/statistic-icon-3.png" alt="statistic-icon-3" />
             <h2>500</h2>
-            <p>Студентів навчено</p>
+            <p>студентів навчено</p>
           </div>
           <div class="elem-stat">
             <img src="img/icons/statistic-icon-4.png" alt="statistic-icon-4" />
             <h2>120</h2>
-            <p>Випускників курсів працевлаштовано</p>
+            <p>випускників курсів працевлаштовано</p>
           </div>
         </div>
       </div>
@@ -324,6 +324,7 @@
             <img src="img/viktor.png" alt="mentor_Viktor" />
             <div class="mentor-dis">
               <p id="mentor_name">Віктор</p>
+              <hr />
               <p>
                 Майбутнім управлінцям неабияк пощастило адже з ними ділитиметься
                 досвідом управлінець із величезним досвідом! Сам засновник і СЕО
@@ -356,6 +357,7 @@
             <img src="img/mark.png" alt="mentor_Mark" />
             <div class="mentor-dis">
               <p id="mentor_name">Марк</p>
+              <hr />
               <p>
                 Майбутнім управлінцям неабияк пощастило адже з ними ділитиметься
                 досвідом управлінець із величезним досвідом! Сам засновник і СЕО
@@ -388,6 +390,7 @@
             <img src="img/vova.png" alt="mentor_Vova" />
             <div class="mentor-dis">
               <p id="mentor_name">Володимир</p>
+              <hr />
               <p>
                 Майбутнім управлінцям неабияк пощастило адже з ними ділитиметься
                 досвідом управлінець із величезним досвідом! Сам засновник і СЕО
@@ -443,7 +446,7 @@
           <div class="elem-contacts">
             <a href="mailto:office@it.volyn.ua">
               <img src="img/icons/email_white_24dp.svg" alt="email" />
-              <h2>Email</h2>
+              <h2>E-mail</h2>
               <p>office@it.volyn.ua</p>
             </a>
           </div>
