Code optimization and Create comments

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="stylesheet" href="css/style/main.css" />
     <link rel="stylesheet" href="css/null.css" />
     <link rel="stylesheet" href="css/style/course.css" />
@@ -14,8 +15,9 @@
     <title>0xIT</title>
   </head>
   <body>
-    <!-- HEADER MENU -->
     <header>
+      <!-- HEADER MENU -->
+      <!--=================================================================-->
       <div class="header-content">
         <a href="#"><img src="img/logo_Oxit.png" alt="logo_Oxit" /></a>
         <div class="header-right">
@@ -41,7 +43,11 @@
             Подати заявку
           </button>
         </div>
+        <!--=================================================================-->
+        <!-- END HEADER MENU-->
+
         <!-- HAMBURGER MENU -->
+        <!--=================================================================-->
         <div class="backcolor">
           <input id="menu-toggle" type="checkbox" />
           <label class="menu-button-container" for="menu-toggle">
@@ -86,14 +92,17 @@
             </li>
           </ul>
         </div>
-        <!-- END HUMBURGER MENU-->
+        <!--=================================================================-->
+        <!-- END HUMBURGER MENU -->
       </div>
     </header>
-    <!-- END HEADER MENU-->
     <section id="main"></section>
+    <!---->
     <!-- REGISTRATION ON COURSE -->
     <section id="request">
       <div class="request-conteiner">
+        <!-- Left block -->
+        <!--=================================================================-->
         <div class="request-left">
           <h1>Курси програмування у Луцьку</h1>
           <p>
@@ -107,6 +116,11 @@
             наступного курсу 3 серпня.
           </p>
         </div>
+        <!--=================================================================-->
+        <!-- End Left block-->
+
+        <!-- Right block -->
+        <!--=================================================================-->
         <div class="request-right">
           <h2>Зареєструватися на курси</h2>
           <div class="user-input">
@@ -143,15 +157,18 @@
           </div>
         </div>
       </div>
+      <!--=================================================================-->
+      <!-- End Left block-->
     </section>
     <!-- END REGISTRATION ON COURSE-->
-
+    <!---->
     <!-- NAME COURSE -->
     <section id="course">
       <div class="course-saction">
         <h1>Курс «Розробка сайтів»</h1>
         <div class="course-elem">
           <!--Перший елемент-->
+          <!--=================================================================-->
           <div class="course">
             <img src="img/icons/course-icon-1.png" alt="course-icon-1" />
             <h3>Розробка сайтів на WordPress</h3>
@@ -163,9 +180,11 @@
               тестових завдань.
             </p>
           </div>
+          <!--=================================================================-->
           <!--END-->
           <!---->
           <!--Другий елемент-->
+          <!--=================================================================-->
           <div class="course">
             <img src="img/icons/course-icon-2.png" alt="course-icon-2" />
             <h3>Розробка сайтів на Drupal 8</h3>
@@ -176,9 +195,11 @@
               Rules, Panels, Devel, Paragraph та багатьох інших).
             </p>
           </div>
+          <!--=================================================================-->
           <!--END-->
           <!---->
           <!--Тертій елемент-->
+          <!--=================================================================-->
           <div class="course">
             <img src="img/icons/course-icon-3.png" alt="course-icon-3" />
             <h3>Ознайомлення з тестуванням</h3>
@@ -189,10 +210,13 @@
               (функціональне, регресивне, системне, тестування швидкодії тощо).
             </p>
           </div>
+          <!--=================================================================-->
           <!--END-->
         </div>
       </div>
       <div class="slider-buttons"></div>
+      <!-- Статистика курсів -->
+      <!--=================================================================-->
       <div class="course-result">
         <div class="statisctic">
           <div class="elem-stat">
@@ -217,15 +241,18 @@
           </div>
         </div>
       </div>
+      <!--=================================================================-->
+      <!-- Кінець статистики курсів -->
     </section>
     <!-- END NAME COURSES-->
-
+    <!---->
     <!-- QOUTE CURSES -->
     <section id="markCurse">
       <div class="qoute-conteiner">
         <h1>Що кажуть студенти наших курсів:</h1>
         <div class="qoute-list">
           <!--Перший елемент-->
+          <!--=================================================================-->
           <div class="qoute-elem">
             <div class="qoute-text">
               <span id="first">“</span>
@@ -242,9 +269,11 @@
             <h3>Коля</h3>
             <p><i>Drupal-девелопер</i></p>
           </div>
+          <!--=================================================================-->
           <!--END-->
           <!---->
           <!--Другий елемент-->
+          <!--=================================================================-->
           <div class="qoute-elem">
             <div class="qoute-text">
               <span id="first">“</span>
@@ -261,9 +290,11 @@
             <h3>Коля2</h3>
             <p><i>Drupal-девелопер</i></p>
           </div>
+          <!--=================================================================-->
           <!--END-->
           <!---->
           <!--Тертій елемент-->
+          <!--=================================================================-->
           <div class="qoute-elem">
             <div class="qoute-text">
               <span id="first">“</span>
@@ -276,13 +307,14 @@
             <h3>Коля3</h3>
             <p><i>Drupal-девелопер</i></p>
           </div>
+          <!--=================================================================-->
           <!--END-->
         </div>
       </div>
       <div class="qoute-buttons"></div>
     </section>
     <!-- END QOUTE CURSES -->
-
+    <!---->
     <!-- VIDEO -->
     <section id="video">
       <div class="video-content">
@@ -313,13 +345,14 @@
       </div>
     </section>
     <!-- END VIDEO -->
-
+    <!---->
     <!-- MENTOR -->
     <section id="mentor">
       <div class="mentors-conteiner">
         <h1>Наші ментори</h1>
         <div class="mentors-list">
           <!--Перший елемент-->
+          <!--=================================================================-->
           <div class="mentors-elem">
             <img src="img/viktor.png" alt="mentor_Viktor" />
             <div class="mentor-dis">
@@ -350,9 +383,11 @@
               </p>
             </div>
           </div>
+          <!--=================================================================-->
           <!--END-->
           <!---->
           <!--Другий елемент-->
+          <!--=================================================================-->
           <div class="mentors-elem">
             <img src="img/mark.png" alt="mentor_Mark" />
             <div class="mentor-dis">
@@ -383,9 +418,11 @@
               </p>
             </div>
           </div>
+          <!--=================================================================-->
           <!--END-->
           <!---->
           <!--Третій елемент-->
+          <!--=================================================================-->
           <div class="mentors-elem">
             <img src="img/vova.png" alt="mentor_Vova" />
             <div class="mentor-dis">
@@ -416,13 +453,14 @@
               </p>
             </div>
           </div>
+          <!--=================================================================-->
           <!--END-->
         </div>
         <div class="mentors-buttons"></div>
       </div>
     </section>
     <!-- END MENTOR-->
-
+    <!---->
     <!-- MAP -->
     <section id="map">
       <iframe
@@ -433,9 +471,12 @@
         referrerpolicy="no-referrer-when-downgrade"
       ></iframe>
     </section>
+    <!-- Контактна інформація -->
     <section id="contacts">
       <div class="contacts-container">
         <div class="contacts-list">
+          <!-- Перший лемент -->
+          <!--=================================================================-->
           <div class="elem-contacts">
             <a href="tel:+38 067 332 17 55">
               <img src="img/icons/call_white_24dp.svg" alt="phone" />
@@ -443,6 +484,11 @@
               <p>+38 067 332 17 55</p>
             </a>
           </div>
+          <!--=================================================================-->
+          <!-- END -->
+          <!---->
+          <!-- Другий елмент -->
+          <!--=================================================================-->
           <div class="elem-contacts">
             <a href="mailto:office@it.volyn.ua">
               <img src="img/icons/email_white_24dp.svg" alt="email" />
@@ -450,6 +496,11 @@
               <p>office@it.volyn.ua</p>
             </a>
           </div>
+          <!--=================================================================-->
+          <!-- END -->
+          <!---->
+          <!-- Третій елмент -->
+          <!--=================================================================-->
           <div class="elem-contacts">
             <a href="https://maps.app.goo.gl/hko1SmDeL6uaaNfg8" target="_blank">
               <img src="img/icons/room_white_24dp.svg" alt="location" />
@@ -457,6 +508,11 @@
               <p>вул. Боженка 34г, Луцьк</p>
             </a>
           </div>
+          <!--=================================================================-->
+          <!-- END -->
+          <!---->
+          <!-- Четвертий елмент -->
+          <!--=================================================================-->
           <div class="elem-contacts">
             <a href="https://www.facebook.com/oxitschool" target="_blank">
               <img src="img/icons/icons8-facebook.svg" alt="facebook" />
@@ -464,6 +520,8 @@
               <p>facebook.com/oxitschool</p>
             </a>
           </div>
+          <!--=================================================================-->
+          <!-- END -->
         </div>
       </div>
     </section>
@@ -475,9 +533,10 @@
     </footer>
   </body>
 
-  <script src="js/mentors.js"></script>
-  <script src="js/qoute.js"></script>
+  <!-- Скріпт для слайдера -->
+  <script src="js/sliders.js"></script>
+  <!-- Скріпт для менюшки -->
   <script src="js/menu.js"></script>
+  <!-- Скріпт для валідайції форми -->
   <script src="js/validation.js"></script>
-  <script src="js/course_slider.js"></script>
 </html>
